# org-agent

./: .gitignore  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
docs/sprint_plans/: sprint_1.md
notebooks/: tool_test.ipynb
src/: config.py  llm_interface.py  message_broker.py  nlu_manager.py  planner.py  view.py
src/memory/: embeddings.py  extractor.py  interface.py  models.py
src/scenarios/: base.py  booking.py  booking_steps.py  prompts.py
src/scenarios/booking/: booking.py  filling_form_step.py  login_step.py  navigate_step.py
src/tools/: base.py  booking_utils.py  browser.py  browser_past.py  call_human.py  call_memory.py  date.py
src/tools/browser/: __init__.py  application.py  auth.py  base.py  click.py  dropdown.py  environment.py  get_text.py  manager.py
src/tools/browser/meta_tools/: book_room_form.py  fill_book_form.py  get_room_numbers.py
src/tools/browser_2/: base.py  click.py  dropdown.py
tests/: conftest.py  test_booking.py  test_browser_manager.py  test_browser_tools.py  test_config.py  test_date.py  test_llm_interface.py  test_nlu_manager.py  test_view.py
