[project]
name = "org-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.49.0",
    "redis>=5.2.1",
    "rich>=13.9.4",
    "omegaconf>=2.3.0",
    "litellm>=1.57.1",
    "bs4>=0.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest-asyncio>=0.25.2",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ipython>=8.30.0",
    "jupyter-core>=5.7.2",
]

